Migrate application to Spring Boot; replace custom configuration with auto-configuration; adjust dependencies, filter, and project structure accordingly.